--- a/productlist/src/main/webapp/error.xhtml
+++ b/productlist/src/main/webapp/error.xhtml
@@ -1,15 +1,17 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:ui="http://java.sun.com/jsf/facelets"
-	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:components="http://java.sun.com/jsf/composite/components">
+      xmlns:ui="http://java.sun.com/jsf/facelets"
+      xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:h="http://java.sun.com/jsf/html"
+      xmlns:components="http://java.sun.com/jsf/composite/components">
+
 
 <h:body>
+
 	<ui:composition template="/templates/commonTemplate.xhtml">
+	
 		<ui:define name="body">
-			<ui:include
-				src="http://localhost:8888/productlist/faces/show_products.xhtml"></ui:include>
+			Unfortunately there has been an error! Please try again later.
 		</ui:define>
 	</ui:composition>
 </h:body>
