Migrate all web servers to docker containers
All services communicate using a docker network group. This gives each container its own portrange and IP. Furthermore a subset of those ports is made accessable from to the host.

--- a/cocome-maven-project/cloud-web-frontend/src/main/webapp/enterprise/show_products.xhtml
+++ b/cocome-maven-project/cloud-web-frontend/src/main/webapp/enterprise/show_products.xhtml
@@ -9,7 +9,7 @@
 	<ui:composition template="/templates/commonTemplate.xhtml">
 		<ui:define name="body">
 			<ui:include
-				src="http://localhost:8888/productlist/faces/show_products.xhtml"></ui:include>
+				src="http://productlist:8080/productlist/faces/show_products.xhtml"></ui:include>
 		</ui:define>
 	</ui:composition>
 </h:body>
